@@ -11,8 +11,8 @@ my @ret = $obj->id;
 my @right_ret = ('CHOROBA', 'CONTYK', 'DANIELR', 'DANPEDER', 'DOUGLISH',
 	'HIHIK', 'HOLCAPEK', 'HPA', 'JANPAZ', 'JANPOM', 'JENDA', 'JIRA',
 	'JSPICAK', 'KLE', 'KOLCON', 'MAJLIS', 'MICHALS', 'MILSO', 'MJFO',
-	'PAJAS', 'PASKY', 'PCIMPRICH', 'PEK', 'PETRIS', 'PKUBANEK', 'POPEL',
-	'PSME', 'RUR', 'RVASICEK', 'SARFY', 'SEIDLJAN', 'SKIM', 'SMRZ',
-	'STRAKA', 'TKR', 'TPODER', 'TRIPIE', 'TYNOVSKY', 'VARISD', 'VASEKD',
-	'YENYA', 'ZABA', 'ZEMAN', 'ZOUL');
+	'PAJAS', 'PAJOUT', 'PASKY', 'PCIMPRICH', 'PEK', 'PETRIS', 'PKUBANEK',
+	'POPEL', 'PSME', 'RUR', 'RVASICEK', 'SARFY', 'SEIDLJAN', 'SKIM',
+	'SMRZ', 'STRAKA', 'TKR', 'TPODER', 'TRIPIE', 'TYNOVSKY', 'VARISD',
+	'VASEKD', 'YENYA', 'ZABA', 'ZEMAN', 'ZOUL');
 is_deeply(\@ret, \@right_ret, 'CPAN authors ids.');
