@@ -1,4 +1,5 @@
 0.30
+ - Add PAJOUT CPAN account.
 
 0.29 2021-03-31T00:17:48+02:00
  - Add PETRIS CPAN account.
